Authentication done before adding product

--- a/cart/src/components/products.css
+++ b/cart/src/components/products.css
@@ -38,3 +38,18 @@
 .single-item img {
   height: 70%;
 }
+.container:last-child{
+  margin-bottom: 10px;
+}
+
+@media screen and (max-width:767px){
+  .card{
+    width: 100% !important;
+  }
+}
+@media screen and (min-width:1920px){
+  .card{
+   max-width: 30% !important;
+  }
+}
+
